; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_NV_vertex_buffer_unified_memory.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_NV_vertex_buffer_unified_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_NV_vertex_buffer_unified_memory = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"glBufferAddressRangeNV\00", align 1
@glad_glBufferAddressRangeNV = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [17 x i8] c"glVertexFormatNV\00", align 1
@glad_glVertexFormatNV = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [17 x i8] c"glNormalFormatNV\00", align 1
@glad_glNormalFormatNV = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [16 x i8] c"glColorFormatNV\00", align 1
@glad_glColorFormatNV = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [16 x i8] c"glIndexFormatNV\00", align 1
@glad_glIndexFormatNV = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [19 x i8] c"glTexCoordFormatNV\00", align 1
@glad_glTexCoordFormatNV = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [19 x i8] c"glEdgeFlagFormatNV\00", align 1
@glad_glEdgeFlagFormatNV = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [25 x i8] c"glSecondaryColorFormatNV\00", align 1
@glad_glSecondaryColorFormatNV = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [19 x i8] c"glFogCoordFormatNV\00", align 1
@glad_glFogCoordFormatNV = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [23 x i8] c"glVertexAttribFormatNV\00", align 1
@glad_glVertexAttribFormatNV = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [24 x i8] c"glVertexAttribIFormatNV\00", align 1
@glad_glVertexAttribIFormatNV = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [22 x i8] c"glGetIntegerui64i_vNV\00", align 1
@glad_glGetIntegerui64i_vNV = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_NV_vertex_buffer_unified_memory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_NV_vertex_buffer_unified_memory(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_NV_vertex_buffer_unified_memory, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %31

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glBufferAddressRangeNV, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glVertexFormatNV, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glNormalFormatNV, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glColorFormatNV, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glIndexFormatNV, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glTexCoordFormatNV, align 8
  %19 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %20 = call i64 %19(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.6, i64 0, i64 0))
  store i64 %20, i64* @glad_glEdgeFlagFormatNV, align 8
  %21 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %22 = call i64 %21(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.7, i64 0, i64 0))
  store i64 %22, i64* @glad_glSecondaryColorFormatNV, align 8
  %23 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %24 = call i64 %23(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.8, i64 0, i64 0))
  store i64 %24, i64* @glad_glFogCoordFormatNV, align 8
  %25 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %26 = call i64 %25(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.9, i64 0, i64 0))
  store i64 %26, i64* @glad_glVertexAttribFormatNV, align 8
  %27 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %28 = call i64 %27(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.10, i64 0, i64 0))
  store i64 %28, i64* @glad_glVertexAttribIFormatNV, align 8
  %29 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %30 = call i64 %29(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.11, i64 0, i64 0))
  store i64 %30, i64* @glad_glGetIntegerui64i_vNV, align 8
  br label %31

31:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
